# voice-controlled-ros-robot

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
action/: NavigateToRoom.action
launch/: gazebo_nav2_launch.py  smart_nav_launch.py
maps/: my_house_map.pgm  my_house_map.yaml
smart_nav_bot/: result_subscriber.py  room_saver.py  voice_controller.py
src/: basic_mover.cpp  location_manager.cpp  navigation_manager.cpp  odom_sub.cpp
srv/: CancelCurrentGoal.srv  GetRoomName.srv  LocationSave.srv  MoveToRoom.srv
